--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@adonisjs/view": "^6.1.0",
     "alpinejs": "^3.12.3",
     "luxon": "^3.3.0",
+    "node-schedule": "^2.1.1",
     "pg": "^8.11.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
